# dashshund

./: .fallowrc.json  .gitignore  .release-please-manifest.json  CHANGELOG.md  README.md  biome.json  electron-builder.config.ts  electron.vite.config.ts  package.json  pwa-assets.config.ts  release-please-config.json  renovate.json  skills-lock.json  tsconfig.json  tsconfig.web.json  vite.config.ts
.github/workflows/: autofix.yml  ci.yml  release-please.yml
assets/mac.icon/: icon.json
patches/: ntcore-ts-client@3.1.3.patch
src-tauri/: CHANGELOG.md  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/main/: index.ts
src/preload/: index.ts
src/renderer/: App.css  App.tsx  electron.d.ts  index.html  index.tsx
src/renderer/components/: CameraSelect.tsx  CameraStream.tsx  ConnectionStatus.tsx  Settings.tsx
src/renderer/lib/: cameras.ts  nt.ts  updater.ts
